<resources>
    <string name="app_name">Batch 170</string>
    <string name="app_version">V 1.0.0</string>
    <string name="hint_username">Silahkan isi Username</string>
    <string name="hint_password">Silahkan isi Password</string>
    <string name="text_login">Login Now</string>
    <string name="username_empty">Username belum diisi!</string>
    <string name="password_empty">Password belum diisi!</string>
    <string name="welcome_text">Selamat Datang di aplikasi Batch 170 Android. XSIS Academy 2018</string>
    <string name="text_daftar_1">Daftar 1</string>
    <string name="text_daftar_2">Daftar 2</string>
    <string name="text_registrasi">Form Registrasi</string>
    <string name="text_term_condition">Syarat &amp; Ketentuan \n Lorem Ipsum adalah contoh teks atau dummy dalam industri percetakan dan penataan huruf atau typesetting. Lorem Ipsum telah menjadi standar contoh teks sejak tahun 1500an, saat seorang tukang cetak yang tidak dikenal mengambil sebuah kumpulan teks dan mengacaknya untuk menjadi sebuah buku contoh huruf. Ia tidak hanya bertahan selama 5 abad, tapi juga telah beralih ke penataan huruf elektronik, tanpa ada perubahan apapun. Ia mulai dipopulerkan pada tahun 1960 dengan diluncurkannya lembaran-lembaran Letraset yang menggunakan kalimat-kalimat dari Lorem Ipsum, dan seiring munculnya perangkat lunak Desktop Publishing seperti Aldus PageMaker juga memiliki versi Lorem Ipsum.</string>

    <string-array name="daftar_hobby">
        <item>- Pilih Hobi -</item>
        <item>Berenang</item>
        <item>Lari</item>
        <item>Sepeda</item>
        <item>Video Game</item>
        <item>Touring</item>
        <item>Bernyanyi</item>
        <item>Membaca</item>
        <item>Sepak Bola</item>
    </string-array>

    <string name="title_tab_1">Tab 1</string>
    <string name="title_tab_2">Tab 2</string>
    <string name="title_tab_3">Tab 3</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>
