<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgLogin"
    tools:context="bootcamp.com.batch170.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/custom_input_type_1"
            android:ems="10"
            android:hint="@string/hint_username"
            android:inputType="text"
            android:padding="10sp"
            android:textColor="@color/textHintSemiPutih"
            android:textColorHint="@color/textHintSemiPutih"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10sp"
            android:textColor="@color/textPutih"
            android:textColorHint="@color/textHintSemiPutih"
            android:textSize="20sp"
            android:background="@drawable/custom_input_type_1"/>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/text_login"
            android:textColor="@color/textPutih"
            android:layout_gravity="center"
            android:background="@drawable/custom_button_type_1"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
